--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -185,5 +185,14 @@
             android:title="@string/pref_title_mms_send_on_enter"
             android:summary="@string/pref_summary_mms_send_on_enter"
             android:defaultValue="true" />
+
+        <com.android.mms.preferences.UserAgentListPreference
+            android:key="pref_key_mms_user_agent"
+            android:defaultValue="default"
+            android:title="@string/pref_title_mms_user_agent"
+            android:summary="@string/pref_summary_mms_user_agent"
+            android:entries="@array/pref_mms_user_agent_entries"
+            android:entryValues="@array/pref_mms_user_agent_values"
+            android:dialogTitle="@string/pref_title_mms_user_agent" />
     </PreferenceCategory>
 </PreferenceScreen>
