Custom user-agent option
port from https://github.com/CyanogenMod/android_packages_apps_Mms/commit/afac2716ff7c43234fe1ba4a0247a25707c3a6c1
Custom user-agent is necessary for MMS access on the Softbank mobile network in Japan.

PS2: rebase

Change-Id: Ia3743360cb4660babbfa3311de016ee3b888a858
Signed-off-by: rdgate <rdgate@gmail.com>

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -193,11 +193,21 @@
             android:dependency="pref_key_enable_emojis"
             android:defaultValue="false" />
     </PreferenceCategory>
+
     <PreferenceCategory android:title="@string/pref_extra_settings">
-    <CheckBoxPreference android:key="pref_key_strip_unicode"
-        android:title="@string/pref_title_strip_unicode"
-        android:summary="@string/pref_summary_strip_unicode"
-        android:defaultValue="false" />
+        <CheckBoxPreference android:key="pref_key_strip_unicode"
+            android:title="@string/pref_title_strip_unicode"
+            android:summary="@string/pref_summary_strip_unicode"
+            android:defaultValue="false" />
+
+        <com.android.mms.preferences.UserAgentListPreference
+            android:key="pref_key_mms_user_agent"
+            android:defaultValue="default"
+            android:title="@string/pref_title_mms_user_agent"
+            android:summary="@string/pref_summary_mms_user_agent"
+            android:entries="@array/pref_mms_user_agent_entries"
+            android:entryValues="@array/pref_mms_user_agent_values"
+            android:dialogTitle="@string/pref_title_mms_user_agent" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/pref_soft_keyboard_title">
