Added ability to toggle enable/disable Send on Enter
Change-Id: Ic7cee9e5babc42d5c00ac50f7a490369b3a3d936

Conflicts:

	res/values-ja/strings.xml
	res/values/strings.xml
	res/xml/preferences.xml
	src/com/android/mms/ui/ComposeMessageActivity.java
	src/com/android/mms/ui/MessagingPreferenceActivity.java

ported from https://github.com/CyanogenMod/android_packages_apps_Mms/commit/c1c34810b3723a4e897d1c833057b17d3f6a0a05

Signed-off-by: rdgate <rdgate@gmail.com>

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -159,8 +159,8 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="@string/pref_display_title"
-        android:key="pref_key_display_settings">
+        android:title="@string/pref_extra_settings"
+        android:key="pref_key_extra_settings">
 
         <CheckBoxPreference
             android:defaultValue="false"
@@ -180,5 +180,10 @@
             android:summary="@string/pref_summary_pref_key_emojis_quick"
             android:dependency="pref_key_enable_emojis"
             android:defaultValue="false" />
+
+        <CheckBoxPreference android:key="pref_key_mms_send_on_enter"
+            android:title="@string/pref_title_mms_send_on_enter"
+            android:summary="@string/pref_summary_mms_send_on_enter"
+            android:defaultValue="true" />
     </PreferenceCategory>
 </PreferenceScreen>
