Added "Strip unicode" feature
PS1: Initial
PS2: Rebase for merge
PS3: Fix duplicate characters with some keyboards

Option which attempts to substitute characters that cannot
be encoded in the limited GSM 03.38 character set. In many
cases this will prevent the keyboards auto-correction
feature or copy/paste from inserting characters that would
switch the message from 7-bit GSM encoding (160 char limit)
to 16-bit Unicode encoding (70 char limit).

This is ready for use with simple alphabets like Spanish
and French, but may need extra special cases for languages
which use unusual characters.

Unfiltered characters:
demo.icu-project.org/icu-bin/convexp?conv=gsm-03.38-2000

Auto-filtered characters:
Aesthetic ligatures like ﬀ
Anything with an accent on this table;
    unicode.org/charts/PDF/U0300.pdf

Special cases so far:
Œ -> OE
œ -> oe

Change-Id: I0207d320c389410590528ce2161235b42f4689af

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -109,4 +109,10 @@
                         android:entryValues="@array/prefValues_vibrateWhen"
                         android:dialogTitle="@string/prefDialogTitle_vibrateWhen" />
   </PreferenceCategory>
+  <PreferenceCategory android:title="@string/pref_extra_settings">
+    <CheckBoxPreference android:key="pref_key_strip_unicode"
+                        android:title="@string/pref_title_strip_unicode"
+                        android:summary="@string/pref_summary_strip_unicode"
+                        android:defaultValue="false" />
+  </PreferenceCategory>
 </PreferenceScreen>
