--- a/res/layout/compose_message_activity.xml
+++ b/res/layout/compose_message_activity.xml
@@ -153,8 +153,8 @@
                     android:hint="@string/type_to_compose_text_enter_to_send"
                     android:minHeight="@dimen/input_text_height"
                     android:maxLines="3"
-                    android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
-                    android:imeOptions="actionSend|flagNoEnterAction"
+                    android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
+                    android:imeOptions="flagNoExtractUI"
                 />
 
                 <LinearLayout
