Added SMS Split by encoding and counter at end of message with settings
Added additional requirements into res/xml/mms_config.xml and src/com/android/mms/MmsConfig.java

All Credits to CM for their work. I just pulled it in.

Migrating features from CM7 to CM9
- http://review.cyanogenmod.com/#change,3316,patchset=1

Change-Id: I05f134e22f5f186dbb5c07bbb14e4489a2a27f9b
Signed-off-by: KAsp3rd <casper200519@gmail.com>

Conflicts:

	res/values/strings.xml
	res/xml/mms_config.xml
	src/com/android/mms/MmsConfig.java
	src/com/android/mms/transaction/SmsMessageSender.java

Signed-off-by: Stevespear426 <stephen.k.spear@gmail.com>

--- a/res/xml/mms_config.xml
+++ b/res/xml/mms_config.xml
@@ -68,6 +68,10 @@
          message will be converted to an mms. -->
     <int name="smsToMmsTextThreshold">-1</int>
 
+    <!-- If true, the text message will be split every 160 characters.
+         If false, the text will never be split before being sent. -->
+    <bool name="enableSplitSMS">false</bool>
+
     <!-- If true, The mms support slide duration.
          If false, The mms does not support slide duration and we have to
          set duration value. -->
