--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -46,6 +46,10 @@
                       android:key="pref_key_sms_delivery_reports"
                       android:summary="@string/pref_summary_sms_delivery_reports"
                       android:title="@string/pref_title_sms_delivery_reports" />
+    <CheckBoxPreference android:defaultValue="false"
+                      android:key="pref_key_sms_split_counter"
+                      android:summary="@string/pref_summary_sms_split_counter"
+                      android:title="@string/pref_title_sms_split_counter" />
     <Preference android:key="pref_key_manage_sim_messages"
                       android:summary="@string/pref_summary_manage_sim_messages"
                       android:title="@string/pref_title_manage_sim_messages" />
