Mms: Add Quick Message Support (1/2)
This adds the ability to display a pop-up Quick Message when a SMS
message is received.  The user can swipe between multiple messages
and reply to messages individually.

Features:
  - Display pop-up Quick Message dialog when message received
  - Multi-message support with swipe between messages
  - Reply to individual messages
  - Mark individual messages as 'Read' or dismiss them all
  - 'Wake and unlock' device on message received

Known issues:
  - Notification light gets dismissed as message pops up when
    screen is locked and does not restart when screen times out
    without user interaction (i.e. message was not seen)

Notes:
  - This only supports SMS, I have no plan for adding MMS support

Screenshot:
  https://dl.dropbox.com/u/50993944/Screenshot_2012-08-26-13-45-10.png

Thank you to:
  - Blunden for the drawables
  - Devatwork for code review and help
  - Burnsra for testing

Patchset 2  - Fix whitespace errors and some cleanup
Patchset 3  - Fix orientation change editText reset
            - Initialize mCurrentQm to prevent NPE
Patchset 4  - Fix HDPI 9patch drawable
Patchset 5  - Rebase
Patchset 6  - Better EditText object handling
            - Better dismiss keyboard handling
            - Fix NPE and a few other minor bugs
Patchset 7  - More formatting changes
Patchset 8  - Fix EditText 'theme'
Patchset 9  - Update commit message to match framework message
Patchset 10 - Better 'Wake and unlock' handling
Patchset 11 - Fix layout for HDPI and MDPI devices
            - Fix small derps introduced by patchset 10
            - Remove WIP
Patchset 12 - Add a separate layout for XHDPI to make the dialog
              a bit bigger on high dpi screens (e.g. S3 and GN)

Change-Id: I0af06017a38b264d8ceda69b6fdfbd1f759bf2b5

Conflicts:

	AndroidManifest.xml
	res/values/strings.xml
	res/xml/preferences.xml
	src/com/android/mms/ui/MessagingPreferenceActivity.java

I would like to add that some of the code CM used for this fea

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -96,10 +96,44 @@
                         android:entryValues="@array/prefValues_vibrateWhen"
                         android:dialogTitle="@string/prefDialogTitle_vibrateWhen" />
   </PreferenceCategory>
+
+  <PreferenceCategory android:title="@string/pref_quickmessage">
+
+    <CheckBoxPreference
+        android:key="pref_key_quickmessage"
+        android:title="@string/pref_quickmessage_title"
+        android:dependency="pref_key_enable_notifications"
+        android:summary="@string/pref_quickmessage_summary"
+        android:defaultValue="false" />
+
+    <CheckBoxPreference
+        android:key="pref_key_qm_lockscreen"
+        android:title="@string/pref_wake_unlock_title"
+        android:summary="@string/pref_wake_unlock_summary"
+        android:dependency="pref_key_quickmessage"
+        android:defaultValue="false" />
+
+    <CheckBoxPreference
+        android:key="pref_key_close_all"
+        android:title="@string/pref_close_all_title"
+        android:summary="@string/pref_close_all_summary"
+        android:dependency="pref_key_quickmessage"
+        android:defaultValue="false" />
+
+  </PreferenceCategory>
+
     <PreferenceCategory android:title="@string/pref_extra_settings">
     <CheckBoxPreference android:key="pref_key_enable_emojis"
                         android:title="@string/pref_title_enable_emojis"
                         android:summary="@string/pref_summary_enable_emojis"
                         android:defaultValue="false" />
-    </PreferenceCategory>
+    <CheckBoxPreference android:key="pref_key_mms_full_timestamp"
+        android:title="@string/pref_title_mms_full_timestamp"
+        android:summary="@string/pref_summary_mms_full_timestamp"
+        android:defaultValue="false" />
+    <CheckBoxPreference android:key="pref_key_mms_use_sent_timestamp"
+        android:title="@string/pref_title_mms_use_sent_timestamp"
+        android:summary="@string/pref_summary_mms_use_sent_timestamp"
+        android:defaultValue="false" />
+  </PreferenceCategory>
 </PreferenceScreen>
