--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,47 +19,55 @@
 -->
 <resources>
     <!-- Activity background color -->
-    <drawable name="class_zero_background">#7f040000</drawable>
+    <drawable name="class_zero_background">#7f000000</drawable>
 
     <!-- text color -->
     <drawable name="text_color_red">#ffff4444</drawable>
     <drawable name="text_color_black">#ff000000</drawable>
     <color name="text_hairline">#ffcccccc</color>
-    <color name="message_count_color">#66333333</color>
+    <color name="message_count_color">#76cfcfcf</color>
 
     <!-- Chat "sent time" text background -->
-    <color name="timestamp_color">#bf000000</color>
+    <color name="timestamp_color">#7cefefef</color>
 
     <!-- the background color used for unread conversation -->
-    <color name="unread_bgcolor">#ffffffff</color>
-    <color name="read_bgcolor">#ffeeeeee</color>
+    <color name="unread_bgcolor">#55afafaf</color>
+    <color name="read_bgcolor">#55000000</color>
 
-    <color name="widget_sender_text_color_read">#555555</color>
-    <color name="widget_sender_text_color_unread">#333333</color>
-    <color name="widget_subject_text_color_read">#777777</color>
-    <color name="widget_subject_text_color_unread">#555555</color>
+    <color name="widget_sender_text_color_read">#ffdfdfdf</color>
+    <color name="widget_sender_text_color_unread">#ffefefef</color>
+    <color name="widget_subject_text_color_read">#ffbfbfbf</color>
+    <color name="widget_subject_text_color_unread">#ffcfcfcf</color>
 
     <!-- Color of the text for buttons in the action bar  -->
-    <color name="action_bar_button_text_color">#FFFFFF</color>
+    <color name="action_bar_button_text_color">#ffefefef</color>
 
-	<!-- New text colors from layouts to make theme chooser apk easier to theme -->
-	<color name="compose_message_edit_text">#000000</color>
-    	<color name="actionbar_text">#333333</color>
-	<color name="delete_thread_dialog">#000000</color>
-	<color name="delivery_report_header">#222222</color>
-	<color name="delivery_report_recipient">#222222</color>
-	<color name="delivery_report_status">#111111</color>
-	<color name="delivery_report_date">#111111</color>
-	<color name="button_text">#000000</color>
-	<color name="message_recieved">#111111</color>
-	<color name="message_sent">#222222</color>
-	<color name="widget_unread_text">#222222</color>
-	<color name="widget_loading">#000000</color>
+    <!-- New text colors from layouts to make theme chooser apk easier to theme -->
+    <color name="compose_message_edit_text">#ffffffff</color>
+    <color name="actionbar_text">#ffdddddd</color>
+    <color name="delete_thread_dialog">#ffcccccc</color>
+    <color name="delivery_report_header">#ffeeeeee</color>
+    <color name="delivery_report_recipient">#ffffffff</color>
+    <color name="delivery_report_status">#ffcccccc</color>
+    <color name="delivery_report_date">#ffcccccc</color>
+    <color name="button_text">#ffffffff</color>
+    <color name="message_recieved">#ff222222</color>
+    <color name="message_sent">#ff222222</color>
+    <color name="widget_unread_text">#ffdddddd</color>
+    <color name="widget_unread_text_light">#ff202020</color>
+    <color name="widget_loading">#ffffffff</color>
 
-	<!-- New Background colors from layouts to make theme chooser apk easier to theme -->
-	<color name="background">#ffffff</color>
-	<color name="darkgray_backgrounds">#666666</color>
-	<color name="dividers">#202020</color>
-	<color name="transparent">#00000000</color>
+    <!-- New Background colors from layouts to make theme chooser apk easier to theme -->
+    <color name="background">#ff000000</color>
+    <color name="darkgray_backgrounds">#ff111111</color>
+    <color name="dividers">#ff202020</color>
+    <color name="transparent">#00000000</color>
+
+    <!-- widget background colors for unread/read -->
+    <color name="widget_unread_bgcolor">#8f2f2f2f</color>
+    <color name="widget_read_bgcolor">#7f000000</color>
+    <color name="widget_unread_bgcolor_light">#8fbfbfbf</color>
+    <color name="widget_read_bgcolor_light">#7fffffff</color>
 
 </resources>
+
