--- a/res/layout/message_list_item_send.xml
+++ b/res/layout/message_list_item_send.xml
@@ -68,12 +68,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:linksClickable="false"
+                    android:layout_alignParentRight="true"
+                    android:gravity="right"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/message_sent"
                     android:textSize="16sp" />
 
                 <LinearLayout
                     android:id="@+id/status_view"
+                    android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/text_view"
