--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -101,6 +101,17 @@
                         android:title="@string/pref_title_quickreply_callbutton"
                         android:dependency="pref_key_enable_notifications" />
   </PreferenceCategory>
+
+  <PreferenceCategory android:title="@string/quick_reply_sms">
+
+    <CheckBoxPreference
+        android:key="pref_key_quickreply"
+        android:title="@string/pref_quickreply_title"
+        android:dependency="pref_key_enable_notifications"
+        android:summary="@string/pref_quickreply_summary"
+        android:defaultValue="false" />
+  </PreferenceCategory>
+
   <PreferenceCategory android:title="@string/pref_display_title"
                       android:key="pref_key_display_settings">
     <CheckBoxPreference android:defaultValue="false"
