Quick Reply: add option to disable call back button
This will add a checkbox in settings to disable the call back button.
Default will be to show the button.

Change-Id: I07728c501b67b78bcfffc878e49949388287c9fb
Signed-off-by: Dirk Rettschlag <dirk.rettschlag@gmail.com>

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -106,5 +106,9 @@
                         android:title="@string/pref_title_enable_emojis"
                         android:summary="@string/pref_summary_enable_emojis"
                         android:defaultValue="false" />
+    <CheckBoxPreference android:defaultValue="true"
+                        android:key="pref_key_display_quickreply_callbutton"
+                        android:summary="@string/pref_summary_quickreply_callbutton"
+                        android:title="@string/pref_title_quickreply_callbutton" />
     </PreferenceCategory>
 </PreferenceScreen>
