Quick Reply: Add option to auto-open QR when new msg comes in
I know that this isn't exactly how Google wants notificaions to work,
but most 3rd-party SMS apps have this option, and I set it up to be
turned off by default.

Patch3: added code to prevent auto-open if the screen is locked
Patch4: fixed the pref description
Patch6: fixed a missing bracked from Patch5, added precautions
to prevent crashed if KeygardManager or TelephonyManager are Null
Patch7: rebase
Patch8: added option to allow popup when screen is locked

Change-Id: Ia5c91399c1c054e1f45f6f04a5bb247d264240f8

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -95,6 +95,16 @@
                         android:entries="@array/prefEntries_vibrateWhen"
                         android:entryValues="@array/prefValues_vibrateWhen"
                         android:dialogTitle="@string/prefDialogTitle_vibrateWhen" />
+    <CheckBoxPreference android:defaultValue="false"
+                        android:key="pref_key_display_quickreply_autoopen"
+                        android:summary="@string/pref_summary_quickreply_autoopen"
+                        android:title="@string/pref_title_quickreply_autoopen"
+                        android:dependency="pref_key_enable_notifications" />
+    <CheckBoxPreference android:defaultValue="false"
+                        android:key="pref_key_lock_sms"
+                        android:summary="@string/pref_lock_sms_summary"
+                        android:title="@string/pref_lock_sms"
+                        android:dependency="pref_key_enable_notifications" />
     <CheckBoxPreference android:defaultValue="true"
                         android:key="pref_key_display_quickreply_callbutton"
                         android:summary="@string/pref_summary_quickreply_callbutton"
