Add back Quick Emoji
-I missed this feature from ICS. Disabled by default.

patchset 2: changed emoticon to smiley face.

Original thread: http://gerrit.sudoservers.com/#/c/183/1

Change-Id: I474f6f9ecd50e2e66bd655b9a3029cc97550f1b4

--- a/res/layout/compose_message_activity.xml
+++ b/res/layout/compose_message_activity.xml
@@ -127,6 +127,15 @@
                 android:layout_height="wrap_content"
                 android:background="#fff" >
 
+               <ImageButton
+                   android:id="@+id/add_emoji"
+                   style="?android:attr/borderlessButtonStyle"
+                   android:src="@drawable/emoji_e057"
+                   android:layout_width="30dp"
+                   android:layout_height="wrap_content"
+                   android:layout_marginLeft="8dip"
+                   android:visibility="gone" />
+
                 <EditText
                     android:textColor="@android:color/black"
                     android:id="@+id/embedded_text_editor"
