Add back Quick Emoji
-I missed this feature from ICS. Disabled by default.

patchset 2: changed emoticon to smiley face.

Original thread: http://gerrit.sudoservers.com/#/c/183/1

Change-Id: I474f6f9ecd50e2e66bd655b9a3029cc97550f1b4

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -111,5 +111,10 @@
                         android:title="@string/pref_title_enable_emojis"
                         android:summary="@string/pref_summary_enable_emojis"
                         android:defaultValue="false" />
+    <CheckBoxPreference android:key="pref_key_emojis_quick"
+                        android:title="@string/pref_title_pref_key_emojis_quick"
+                        android:summary="@string/pref_summary_pref_key_emojis_quick"
+                        android:dependency="pref_key_enable_emojis"
+                        android:defaultValue="false" />
     </PreferenceCategory>
 </PreferenceScreen>
