--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -111,5 +111,10 @@
                         android:title="@string/pref_title_enable_emojis"
                         android:summary="@string/pref_summary_enable_emojis"
                         android:defaultValue="false" />
+    <ListPreference     android:key="pref_key_mms_input_type"
+                        android:title="@string/pref_title_input_type"
+                        android:summary="@string/pref_summary_input_type"
+                        android:entries="@array/pref_entries_input_type"
+                        android:entryValues="@array/pref_values_input_type" />
     </PreferenceCategory>
 </PreferenceScreen>
