--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -57,6 +57,11 @@
   <PreferenceCategory android:title="@string/pref_mms_settings_title"
                       android:key="pref_key_mms_settings">
     <CheckBoxPreference android:defaultValue="false"
+                      android:key="pref_key_mms_group_mms"
+                      android:summary="@string/pref_summary_mms_group_mms"
+                      android:title="@string/pref_title_mms_group_mms"
+                      android:persistent="true" />
+    <CheckBoxPreference android:defaultValue="false"
                       android:key="pref_key_mms_delivery_reports"
                       android:summary="@string/pref_summary_mms_delivery_reports"
                       android:title="@string/pref_title_mms_delivery_reports" />
