--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -70,6 +70,24 @@
         <item>Poker face</item>              <!-- 20: :-I -->
     </string-array>
 
+    <string-array name="pref_mms_notification_vibrate_pattern_entries">
+        <item>Normal</item>
+        <item>Medium Vibrate</item>
+        <item>Long Vibrate</item>
+        <item>Multiple Short</item>
+        <item>Multiple Long</item>
+        <item>@string/pref_title_mms_notification_vibrate_custom</item>
+    </string-array>
+
+    <string-array name="pref_mms_notification_vibrate_pattern_values">
+        <item></item>
+        <item>0,1200</item>
+        <item>0,2500</item>
+        <item>0,300,100,300,100,300,100,300,100,300</item>
+        <item>0,800,200,800,200,800</item>
+        <item>custom</item>
+    </string-array>
+
     <!-- String to match as no subject and filter out as a subject. For example, if the
          subject string is "no subject", we won't display that. We'll pretend
          no subject string was delivered. -->
