Mms: added the option to change the soft keyboard type when composing messages
This commit gives the user the option to change the keyboard from Emoji
to enter for a new line or enter to send.
The setting has no effect on the hardware keyboard.

Ported from http://gerrit.sudoservers.com/#/c/3859/, fixed whitespaces

Change-Id: I9bd661dac747652ad01e3b002aa294f691b87a37

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -181,4 +181,13 @@
             android:dependency="pref_key_enable_emojis"
             android:defaultValue="false" />
     </PreferenceCategory>
+
+    <PreferenceCategory android:title="@string/pref_soft_keyboard_title">
+        <ListPreference
+            android:key="pref_key_mms_input_type"
+            android:title="@string/pref_title_input_type"
+            android:summary="@string/pref_summary_input_type"
+            android:entries="@array/pref_entries_input_type"
+            android:entryValues="@array/pref_values_input_type" />
+    </PreferenceCategory>
 </PreferenceScreen>
