Fix overlapping MMS picture
This should fix the issue with MMS overlapping text on stock layout

Change-Id: I1c7663db747ef1df95a02cb8c8f7e9f5e7078758

--- a/res/layout/message_list_item_recv.xml
+++ b/res/layout/message_list_item_recv.xml
@@ -128,6 +128,7 @@
 
                 <ViewStub android:id="@+id/mms_layout_view_stub"
                     android:layout="@layout/mms_layout_view"
+                    android:layout_below="@id/status_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
