Port "Strip Unicode" feature from ICS branch into JB-MR1
This feature add support for strip unicode characters that are not
supported for 160 character SMS.

Change-Id: I10c8f35b86f009b5484754572ff6ea33c52a4df3
Signed-off-by: Petr Reznicek <kecinzer@gmail.com>

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -181,4 +181,10 @@
             android:dependency="pref_key_enable_emojis"
             android:defaultValue="false" />
     </PreferenceCategory>
+    <PreferenceCategory android:title="@string/pref_extra_settings">
+    <CheckBoxPreference android:key="pref_key_strip_unicode"
+        android:title="@string/pref_title_strip_unicode"
+        android:summary="@string/pref_summary_strip_unicode"
+        android:defaultValue="false" />
+    </PreferenceCategory>
 </PreferenceScreen>
