Mms: allow deleting of message threads from QuickReply
 + new menu option in QuickReply to delete the thread
 + the char counter in quick reply is now shows
   number of charaters left in message
 - fixed call to @Depreciated method

Patch Set 2:
 * now requires http://gerrit.sudoservers.com/4603
 + added two new options 'Mark Read' & 'Delete Thread'
 + buttons shown is now configurable
 + fixed notification not being marked as read on delete

Patch Set 3:
 + fixed showing buttons not showing as user specified
 / wip deleting only the latest notification may be
     a pain... I removed the delete entire thread
     but delete only last message is not working correctly
     yet

Change-Id: I55cae38e65f565af4e9edc86176e231ab043ff71

--- a/res/menu/qr_menu.xml
+++ b/res/menu/qr_menu.xml
@@ -5,6 +5,9 @@
         android:id="@+id/qr_menu_close"
         android:title="@string/qr_close_popup"/>
     <item
+        android:id="@+id/qr_menu_delete"
+        android:title="@string/menu_delete"/>
+    <item
         android:id="@+id/qr_menu_read"
         android:title="@string/qr_mark_read"/>
     <item
