Mms: add new QuickReply buttons Delete & Mark Read
Allows customization of the QuickReply action in
the notification shade to respond to new incoming
sms messages. Enable through Mms > Settings

Patch Set 9:
  + enforce max of 3 QuickReply actions

Change-Id: I55cae38e65f565af4e9edc86176e231ab043ff71

--- a/res/layout/quick_reply_sms.xml
+++ b/res/layout/quick_reply_sms.xml
@@ -51,7 +51,7 @@
             android:layout_weight="1.0"
             android:autoText="true"
             android:capitalize="sentences"
-            android:hint="Type message"
+            android:hint="@string/quick_reply_hint"
             android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
             android:minHeight="@dimen/input_text_height"
             android:textAppearance="?android:attr/textAppearanceSmall" />
